tests/invalid/zero_sized_array.frag.hlsl
float4 main() : SV_TARGET
{
    float my_array[] = {};
    return 0.0f;
}
